Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.0
-
None
-
Qt 4.8
Visual studio 2010 Professional SP1
Windows 7
Description
When qmake is used to generate project for visual studio 2010 (vcxproj file), it doesn't set default optimization for debug mode.
// for debug mode
<ClCompile>
absent <Optimization> element
</ClCompile>
In this case MS VS2010 selects Max Speed optimization because of
..\MSBuild\Microsoft.Cpp\v4.0\Microsoft.Cl.Common.props.
Similar fix (or better say workaround for MSVS2010) was done before:
https://bugreports.qt.nokia.com/browse/QTBUG-10728
While later changes on msbuild_objectmodel.cpp and msvc_objectmodel.h discarded the fix of QTBUG-10728.