qmake/generators/win32/msbuild_objectmodel.cpp
@@ -925,15 +925,17 @@ static inline QString toString(inlineExpansionOption option)
 static inline QString toString(optimizeOption option)
 {
     switch (option) {
-    case optimizeDisabled:
-    case optimizeFull:
     case optimizeCustom:
     case optimizeDefault:
         break;
+    case optimizeDisabled:
+        return "Disabled";
     case optimizeMinSpace:
         return "MinSpace";
     case optimizeMaxSpeed:
         return "MaxSpeed";
+    case optimizeFull:
+        return "Full";
     }
     return QString();
 }
